--- a/assets/main.css
+++ b/assets/main.css
@@ -1028,25 +1028,25 @@ video {
 }
 
 .border-surface-light\/10 {
-  border-color: rgb(55 65 81 / 0.1);
+  border-color: rgb(6 7 36 / 0.1);
 }
 
 .border-surface-light\/20 {
-  border-color: rgb(55 65 81 / 0.2);
+  border-color: rgb(6 7 36 / 0.2);
 }
 
 .border-surface-light\/50 {
-  border-color: rgb(55 65 81 / 0.5);
+  border-color: rgb(6 7 36 / 0.5);
 }
 
 .border-surface-light {
   --tw-border-opacity: 1;
-  border-color: rgb(55 65 81 / var(--tw-border-opacity, 1));
+  border-color: rgb(6 7 36 / var(--tw-border-opacity, 1));
 }
 
 .bg-background {
   --tw-bg-opacity: 1;
-  background-color: rgb(10 15 26 / var(--tw-bg-opacity, 1));
+  background-color: rgb(255 249 237 / var(--tw-bg-opacity, 1));
 }
 
 .bg-blue-500 {
@@ -1063,6 +1063,69 @@ video {
   background-color: rgb(17 24 39 / 0.5);
 }
 
+.bg-dark-purple-rk {
+  --tw-bg-opacity: 1;
+  background-color: #060724
+}
+
+.bg-purple-rk {
+  --tw-bg-opacity: 1;
+  background-color: #351f39
+}
+
+.bg-surface-purple-rk {
+  --tw-bg-opacity: 1;
+  background-color: rgb(53 31 57 / var(--tw-bg-opacity, 1));
+}
+
+.bg-surface-purple-rk\/50 {
+  background-color: rgb(53 31 57 / 0.5);
+}
+
+.bg-surface-gold-rk {
+  --tw-bg-opacity: 1;
+  background-color: rgb(	189 164 114 / var(--tw-bg-opacity, 1));
+}
+
+.bg-surface-gold-rk\/50 {
+  background-color: rgb(189 164 114 / 0.5);
+}
+
+
+
+/*  */
+.txt-dark-purple-rk {
+  --tw-text-opacity: 1;
+  color: #060724
+}
+
+.txt-purple-rk {
+  --tw-text-opacity: 1;
+  color: #351f39
+}
+
+.bg-gold-rk {
+  --tw-bg-opacity: 1;
+  background-color: #bda472
+}
+
+.txt-gray-blue-rk {
+  --tw-text-opacity: 1;
+  color: #dae2e4;
+}
+
+.txt-black-rk {
+  --tw-text-opacity: 1;
+  color: rgb(0 0 0);
+}
+
+.txt-gold-rk {
+  --tw-text-opacity: 1;;
+  color: #bda472
+}
+
+
+
 .bg-primary {
   --tw-bg-opacity: 1;
   background-color: rgb(187 134 252 / var(--tw-bg-opacity, 1));
@@ -1076,6 +1139,16 @@ video {
 .bg-surface\/50 {
   background-color: rgb(31 41 55 / 0.5);
 }
+
+.bg-surface-purple {
+  --tw-bg-opacity: 1;
+  background-color: rgb(31 41 55 / var(--tw-bg-opacity, 1));
+}
+
+.bg-surface-purple\/50 {
+  background-color: rgb(31 41 55 / 0.5);
+}
+
 
 .bg-transparent {
   background-color: transparent;
@@ -1103,6 +1176,16 @@ video {
   --tw-gradient-from: #60a5fa var(--tw-gradient-from-position);
   --tw-gradient-to: rgb(96 165 250 / 0) var(--tw-gradient-to-position);
   --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+}
+
+.from-purple-400 {
+  --tw-gradient-from: #060724 var(--tw-gradient-from-position);
+  --tw-gradient-to: rgb(6 7 36 / 0) var(--tw-gradient-to-position);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+}
+
+.to-gold-500 {
+  --tw-gradient-to: #bda472 var(--tw-gradient-to-position);
 }
 
 .from-blue-500\/0 {
@@ -1164,7 +1247,7 @@ video {
 }
 
 .via-accent-purple\/10 {
-  --tw-gradient-to: rgb(192 132 252 / 0)  var(--tw-gradient-to-position);
+  --tw-gradient-to: #060724  var(--tw-gradient-to-position);
   --tw-gradient-stops: var(--tw-gradient-from), rgb(192 132 252 / 0.1) var(--tw-gradient-via-position), var(--tw-gradient-to);
 }
 
@@ -1189,6 +1272,8 @@ video {
 .to-purple-500 {
   --tw-gradient-to: #a855f7 var(--tw-gradient-to-position);
 }
+
+
 
 .to-purple-500\/0 {
   --tw-gradient-to: rgb(168 85 247 / 0) var(--tw-gradient-to-position);
@@ -1308,7 +1393,7 @@ video {
 
 .text-4xl {
   font-size: 2.25rem;
-  line-height: 2.5rem;
+  line-height: 2.95rem;
 }
 
 .text-base {
