--- a/assets/main.css
+++ b/assets/main.css
@@ -1091,7 +1091,10 @@ video {
   background-color: rgb(189 164 114 / 0.5);
 }
 
-
+.bg-gray-blue-rk {
+  --tw-bg-opacity: 1;
+  background-color: #dae2e4;
+}
 
 /*  */
 .txt-dark-purple-rk {
