--- a/public/tailwind.css
+++ b/public/tailwind.css
@@ -29,6 +29,9 @@
 .-left-\[25px\] {
   left: calc(25px * -1);
 }
+.z-4 {
+  z-index: 4;
+}
 .z-10 {
   z-index: 10;
 }
@@ -43,6 +46,9 @@
 }
 .mt-auto {
   margin-top: auto;
+}
+.ml-auto {
+  margin-left: auto;
 }
 .line-clamp-1 {
   overflow: hidden;
